--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
       <img src="./avatar.png" alt="avatar" class="header__avatar" />
       <div class="header__textContainer">
         <h1 class="header__title">Данил Козловский</h1>
-        <h3 class="header__subtitle">любитель ракет и сладких конфет</h3>
+        <h3 class="header__subtitle">любитель ракет и сладких конфет😂</h3>
       </div>
     </header>
     <main>
+      <p>QA Engineer</p>
       <section class="links">
         <h2 class="links__header">Не обещаю сразу ответить,but</h2>
         <ul class="links__container">
