--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       </div>
     </header>
     <main>
-      <p>QA Engineer</p>
+      <p>QA Engineern</p>
+      <p>QA Engineern</p>
       <section class="links">
         <h2 class="links__header">Не обещаю сразу ответить,but</h2>
         <ul class="links__container">
@@ -76,7 +77,8 @@
       </section>
     </main>
     <footer>
-      <a class="button-link" href=""> Покупаем? </a>
+      <a class="button-link" href="">  QA Engineer? </a>
+
     </footer>
   </body>
 </html>
